Fix label chip styling in dark mode

--- a/Frontend/src/app/pages/home/home.page.scss
+++ b/Frontend/src/app/pages/home/home.page.scss
@@ -4,24 +4,23 @@
   padding: 2px 4px 8px;
 
   a {
-    color: black;
+    color: var(--ion-text-color);
     padding: 6px 12px;
-    border: 1px solid rgba(0,0,0,0.4);
+    border: 1px solid;
+    border-color: var(--ion-border-color);
     border-radius: 20px;
     margin: 2px 4px;
     cursor: pointer;
     transition: box-shadow 0.1s ease-in-out;
 
-    &.selected {
-      border-color: var(--ion-color-primary);
-      background: var(--ion-color-primary);
-      color: white;
-      box-shadow: 1px 1px 7px rgb(210,210,210);
+    &:hover {
+      background-color: var(--ion-item-background-hover,rgba(var(--ion-text-color-rgb,0,0,0),0.04)); // Pulled from ion-item button hover
     }
 
-    &:hover {
-      opacity: initial;
-      box-shadow: 1px 1px 7px rgb(220,220,220);
+    &.selected {
+      border-color: var(--ion-color-primary);
+      background-color: var(--ion-color-primary);
+      color: var(--ion-color-light);
     }
   }
 }
